--- a/src/main/resources/templates/show/index.html
+++ b/src/main/resources/templates/show/index.html
@@ -15,8 +15,7 @@
                 <span th:if="${show.bookable}" th:text="${show.price} + ' €'">9.99 €</span>
 
                 <span th:if="${#lists.size(show.representations)==1}">- 1 représentation</span>
-                <span th:if="${#lists.size(show.representations)>1}"
-                      th:text="|- ${#lists.size(show.representations)} représentations|">- 2 représentations</span>
+                <span th:if="${#lists.size(show.representations)>1}" th:text="|- ${#lists.size(show.representations)} représentations|">- 2 représentations</span>
                 <em th:if="${#lists.size(show.representations)==0}">aucune représentation</em>
 
                 <a th:href="@{/shows/{id}(id=${show.id})}">View</a>
@@ -26,4 +25,3 @@
 </div>
 </body>
 </html>
-
