--- a/src/main/resources/templates/show/show.html
+++ b/src/main/resources/templates/show/show.html
@@ -1,9 +1,6 @@
 <!DOCTYPE html>
 <html xmlns:layout="http://www.ultraq.net.mx/thymeleaf/layout"
       layout:decorate="~{layouts/main}">
-<!DOCTYPE html>
-<html xmlns:layout="http://www.ultraq.net.mx/thymeleaf/layout"
-      layout:decorate="~{layouts/main}">
 <head>
     <title>Fiche d'un spectacle</title>
 </head>
@@ -31,27 +28,23 @@
 
         <h2>Liste des artistes</h2>
         <p><strong>Auteur:</strong>
-            <span th:each="auteur,iter : ${collaborateurs['auteur']}"
-                  th:text="${auteur.firstname}+' '+${auteur.lastname}
-		        	+ (${iter.count}==${iter.size}-1 ? ' et ':(${iter.last}?'':', '))">
+            <span th:each="auteur,iter : ${collaborateurs['auteur']}" th:text="${auteur.firstname}+' '+${auteur.lastname}
+	        	+ (${iter.count}==${iter.size}-1 ? ' et ':(${iter.last}?'':', '))">
 	            	Firstname Lastname
 	        	</span>
         </p>
         <p><strong>Metteur en scène:</strong>
-            <span th:each="scenographe,iter : ${collaborateurs['scénographe']}"
-                  th:text="${scenographe.firstname}+' '+${scenographe.lastname}
-	        		+ (${iter.count}==${iter.size}-1 ? ' et ':(${iter.last}?'':', '))">
+            <span th:each="scenographe,iter : ${collaborateurs['scénographe']}" th:text="${scenographe.firstname}+' '+${scenographe.lastname}
+	        	+ (${iter.count}==${iter.size}-1 ? ' et ':(${iter.last}?'':', '))">
 	            	Firstname Lastname
 	        	</span>
         </p>
         <p><strong>Distribution:</strong>
-            <span th:each="comedien,iter : ${collaborateurs['comédien']}"
-                  th:text="${comedien.firstname}+' '+${comedien.lastname}
-	        		+ (${iter.count}==${iter.size}-1 ? ' et ':(${iter.last}?'':', '))">
+            <span th:each="comedien,iter : ${collaborateurs['comédien']}" th:text="${comedien.firstname}+' '+${comedien.lastname}
+	        	+ (${iter.count}==${iter.size}-1 ? ' et ':(${iter.last}?'':', '))">
 	            	Firstname Lastname
 	        	</span>
         </p>
-
 
 
         <nav><a th:href="@{/shows}">Retour à l'index</a></nav>
@@ -59,4 +52,3 @@
 </div>
 </body>
 </html>
-
